kolibri-server (0.3.7~beta1-0ubuntu4) UNRELEASED; urgency=medium

  [ José L. Redrejo Rodríguez ]
  * Build kolibri-server as a native package
  * If port 80 is selected when using debconf, remove default nginx symlink

  [ Benjamin Bach ]
  * Silence startup error when redis cache is empty #63

 -- José L. Redrejo Rodríguez <jredrejo@debian.org>  Mon, 27 Apr 2020 19:45:44 +0200

kolibri-server (0.3.7~beta1-0ubuntu2) bionic; urgency=medium

  * Use runuser instead of su (potential systemd issue) #54

 -- Benjamin Bach <benjamin@learningequality.org>  Tue, 14 Apr 2020 12:41:39 +0200

kolibri-server (0.3.7~beta1-0ubuntu1) bionic; urgency=medium

  [ José L. Redrejo Rodríguez ]
  * Purge infinitely growing in-memory redis cache with a weekly cronjob and upon restarting Kolibri
  * Optimizations to system service https://github.com/learningequality/kolibri-server/pull/54
  * Better guarantees for removing pid and sockets https://github.com/learningequality/kolibri-server/pull/54
  * Changes to UWSGI configuration https://github.com/learningequality/kolibri-server/pull/54

  [ Benjamin Bach ]
  * Changes to manual build workflow

 -- Benjamin Bach <benjamin@learningequality.org>  Thu, 26 Mar 2020 11:07:48 +0100

kolibri-server (0.3.6-0ubuntu1) bionic; urgency=medium

  * New release with multiple new translations added

 -- José L. Redrejo Rodríguez <jredrejo@debian.org>  Tue, 17 Dec 2019 09:58:06 +0100

kolibri-server (0.3.5-0ubuntu1) bionic; urgency=medium

  * Some optimizations in nginx configuration

 -- José L. Redrejo Rodríguez <jredrejo@debian.org>  Wed, 20 Nov 2019 20:38:03 +0100

kolibri-server (0.3.4-0ubuntu1) bionic; urgency=medium

  * Check if redis is running to enable/disable its cache
  * Changed animation on the error page

 -- José L. Redrejo Rodríguez <jredrejo@debian.org>  Thu, 07 Nov 2019 13:33:43 +0100

kolibri-server (0.3.3-0ubuntu1) bionic; urgency=medium

  * Create error page to automatically detect when the server is back