@@ -87,7 +87,7 @@ server {
     location @error502 {
         ssi on;
         internal;
-        root /etc/kolibri/dist/error_pages;
+        root /usr/share/kolibri/error_pages;
         rewrite ^(.*)$ $error502 break;
 
     }
